--- a/test.html
+++ b/test.html
@@ -5,8 +5,8 @@
 <meta http-equiv="Content-Style-Type" content="text/css" />
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 <meta name="description" content="mixpistols.net ......... we are mixpistols. mixpistols are VJ unit with various media mix. your sense is tickled. ">
-<meta name="keywords" content="mixpistols,play.net,play groove,DJ AK,rettman,speedy,tarumix,zuyack,dogs nose,ミックスピストルズ,ドッグスノーズ,熊谷,くまがや">  
-<title>mixpistols.net</title>
+<meta name="keywords" content="mixpistols,play.net,play groove,DJ AK,rettman,speedy,tarumix,zuyack,dogs nose,ミックスピストルズ,ドッグスノーズ">  
+<title>mixpistols.net </title>
 
 <link rel="stylesheet" type="text/css" href="./style.css" />
 <script type="text/javascript" src="./js/swfobject.js"></script>
